# FactAudit

./: .gitignore  Dockerfile  dispatch.example.yaml  dispatch.yaml  dispatch_mock.yaml  docker-compose.yaml  hint.txt  启动.txt  架构.txt
.github/workflows/: build-container-ghcr.yml
cairn/: pyproject.toml
cairn/src/factaudit/dispatcher/: config.py  contracts.py  logging.py  models.py  output_parser.py
cairn/src/factaudit/dispatcher/prompts/default/: develop.md  develop_conclude.md  explore.md  reason.md
cairn/src/factaudit/dispatcher/prompts/mock/: bootstrap.md  develop.md  develop_conclude.md  explore.md
cairn/src/factaudit/dispatcher/protocol/: client.py
cairn/src/factaudit/dispatcher/runtime/: cancellation.py  heartbeat.py  process.py  startup_healthcheck.py
cairn/src/factaudit/dispatcher/scheduler/: loop.py  worker_select.py
cairn/src/factaudit/dispatcher/tasks/: bootstrap.py  explore.py
cairn/src/factaudit/dispatcher/workers/: registry.py
cairn/src/factaudit/dispatcher/workers/adapters/: claudecode.py  codex.py  mock.py
cairn/src/factaudit/server/: db.py
cairn/src/factaudit/server/routers/: hints.py
cairn/tests/: conftest.py  test_mock_end_to_end.py  test_protocol_and_startup.py  test_runtime_logic.py  test_server_api.py  test_worker_tasks.py
container/: Dockerfile  README.md
docs/specs/: dispatcher-design.md  server-protocol.md
factaudit/tests/: test_config_and_adapters.py  test_container_archives.py  test_contracts_and_drivers.py  test_db_migrations.py  (+1 more)
myfiles/: joomla新资产.txt  joomla资产.txt  probe_new_assets.sh  待测试的漏洞.txt
(+330 files in other folders)
